# tidal-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  auth_cli.py  docker-compose.auth.yml  docker-compose.yml  pyproject.toml  server.json  start_mcp.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
mcp_server/: server.py  utils.py
mcp_server/tools/: auth.py  history.py  mixes.py  playlists.py  search.py  tracks.py
tests/: test_format_track_data.py  test_handle_login.py
tidal_api/: app.py  utils.py
tidal_api/routes/: auth.py  history.py  mixes.py  playlists.py  search.py  tracks.py
