[project]
name = "tidal-mcp"
version = "0.1.0"
description = "Model Context Protocol server for TIDAL music streaming - search, create playlists, get recommendations, and manage your TIDAL library through Claude"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ian Beal", email = "ian.b255@gmail.com" }
]
keywords = ["mcp", "tidal", "music", "streaming", "model-context-protocol", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=3.1.0",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "tidalapi>=0.8.11",
]

[project.urls]
Homepage = "https://github.com/ibeal/tidal-mcp"
Repository = "https://github.com/ibeal/tidal-mcp"
Issues = "https://github.com/ibeal/tidal-mcp/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_server", "tidal_api"]

[tool.mcp]
name = "io.github.ibeal/tidal-mcp"